@@ -1,0 +1,8 @@
+EMAIL_HOST_USER = yddjango@gmail.com
+EMAIL_HOST_PASSWORD = vuvfwbutuyabkavq
+EMAIL_TO_USER = ykbs100@gmail.com
+NAME = sampledatabase2
+USER = postgres
+PASSWORD = yadu
+HOST = localhost
+PORT = 5432
