@@ -1,6 +1,4 @@
 from django.contrib import admin
 from .models import Certifications
 
-# Register your models here.
-
 admin.site.register(Certifications)
