@@ -1,5 +1,6 @@
-# Generated by Django 5.1 on 2024-08-17 06:18
+# Generated by Django 5.1 on 2024-08-24 06:05
 
+import uuid
 from django.db import migrations, models
 
 
@@ -14,11 +15,12 @@ class Migration(migrations.Migration):
         migrations.CreateModel(
             name='Certifications',
             fields=[
-                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
-                ('cover_image', models.ImageField(blank=True, default=None, null=True, upload_to='')),
+                ('cover_image_url', models.CharField(blank=True, max_length=500, null=True)),
                 ('certification_name', models.CharField(max_length=700)),
                 ('certification_description', models.TextField(max_length=1000)),
-                ('certificate_image', models.ImageField(blank=True, default=None, null=True, upload_to='')),
+                ('certificate_image_url', models.CharField(blank=True, max_length=500, null=True)),
+                ('created', models.DateTimeField(auto_now_add=True)),
+                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False, unique=True)),
             ],
         ),
     ]
